<resources>
    <string name="app_name">Gigs</string>
    <string name="detail_activity_label">Details gig</string>

    <string name="location_input_hint">Search location</string>
    <string name="button_add_to_calendar">ADD TO CALENDAR</string>
    <string name="content_description_list_view_icon">This is a description for the icon</string>

    <string name="error_message">Location not found, please try an other location.</string>
    <string name="error_empty_location">Please fill in a location.</string>
    <string name="error_no_metro_area">No metro area found for this location.</string>
    <string name="error_no_events_founds">No events found for this location.</string>

    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>


    <string name="welcome_message">Hi %1$s!</string>

    <string name="pre_cat_profile_key" translatable="false">profile</string>
    <string name="pref_cat_profile_label">Profile</string>
    <string name="pref_name_key" translatable="false">name</string>
    <string name="pref_name_label">Name</string>
    <string name="pref_name_default" translatable="false">Gig Lover</string>

    <string name="pre_cat_config_key" translatable="false">settings</string>
    <string name="pref_cat_config_label">Settings</string>
    <string name="pref_filter_key" translatable="false">filter</string>
    <string name="pref_filter_label">Filter on concerts</string>
    <string name="pref_filter_summary_on">Filtering on</string>
    <string name="pref_filter_summary_off">Filtering off</string>


    <string name="event_notification_title">Event added to calendar</string>
    <string name="action_cancel_title">Cancel</string>
    <string name="main_notification_channel_name" translatable="false">primary</string>
    <string name="pref_lang_default" translatable="false">en</string>
    <string name="pref_lang_key" translatable="false">language</string>
    <string name="pref_lang_label">Language</string>

    <string name="pref_lang_label_en">English</string>
    <string name="pref_lang_label_nl">Dutch</string>
    <string name="pref_lang_value_en" translatable="false">en</string>
    <string name="pref_lang_value_nl" translatable="false">nl</string>
    <string name="pref_lang_en">English</string>
    <string name="notification_action_calendar_title">See calendar</string>
</resources>
